Minor typos spottes in talks.html

--- a/talks.html
+++ b/talks.html
@@ -43,7 +43,7 @@
         
         <br>
         
-        <h1>Slides on mensuretional unc.</h1><!--<a href="undergraduate/index.html">Slides on mensuretional unc.</a>-->
+        <h1>Slides on mensurational unc.</h1><!--<a href="undergraduate/index.html">Slides on mensuretional unc.</a>-->
         <h4><i>presented</i> 29 November 2018, Liverpool</h4>
 
 		<br>
