changed profile picture

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!--<header>
 			<h2> &nbsp Welcome to my site!</h2>
    		</header>-->
-	
+
 		<div class="container" id="myNavbar"></div>
 
 		<div class="container">
@@ -37,30 +37,33 @@
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am a postdoctoral research associate, in short <i>postdoc</i>, at the University of Liverpool since May 2018. My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms. I am appointed for the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. Previously, I was manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years. I hold a PhD in risk and uncertainty in industrial engineering systems from UoL, an MSc <i>cum laude</i> in structural engineering and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
-
+	        	<p>I am a postdoctoral research associate at the University of Liverpool since May 2018.
+							My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms.
+							I am appointed for the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design.
+							Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.
+							I hold a PhD in risk and uncertainty in engineering from UoL, an MSc <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
 
 			<h4>Research interests</h4>
         	<ul style="list-style-type: disc;">
-		  	  <li>Imprecise probability and statistics</li>  
-		  	  <li>Intrusive and non-intrusive forward uncertainty propagation</li> 
-		  	  <li>Monte Carlo and advanced sampling</li> 
+		  	  <li>Imprecise probability and statistics</li>
+		  	  <li>Intrusive and non-intrusive forward uncertainty propagation</li>
+		  	  <li>Monte Carlo and advanced sampling</li>
 		  	  <li>Inferential statistics with imprecise data</li>
-			  <li>Reliability analysis</li> 
-			  <li>Rigorous computing with interval analysis</li> 
-			  <li>Machine learning for approximation of computer codes</li> 
-			  <li>Robust Bayes</li> 
-			  <li>Probability and confidence boxes</li> 
-			  <li>Credal networks</li> 
-			  <li>Parametric dimensionality reduction</li> 
+			  	<li>Reliability analysis</li>
+			  	<li>Rigorous computing with interval analysis</li>
+			  	<li>Machine learning for approximation of computer codes</li>
+			  	<li>Robust Bayes</li>
+			  	<li>Probability and confidence boxes</li>
+			  	<li>Credal networks</li>
+			  	<li>Parametric dimensionality reduction</li>
 			</ul>
 
 	        </div>
 
 
 	    	<div class="columnR">
-	        	<img src="pics/marco4.jpg" alt="marco_face" width="280" height="280">
+	        	<img src="pics/marco5.jpg" alt="marco_face" width="280" height="280">
 	    	</div>
         </div>
 
@@ -72,7 +75,7 @@
 
 	<script src="equal4allpages.js"></script>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.js" 
+	<script src="https://code.jquery.com/jquery-3.2.1.js"
 	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
