--- a/index.html
+++ b/index.html
@@ -37,26 +37,34 @@
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am a postdoctoral research associate at the University of Liverpool since May 2018.
-							My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms.
-							I am appointed for the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design.
-							Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.
-							I hold a PhD in risk and uncertainty in engineering from UoL, an MSc <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
+	        	<p>I am postdoc at the University of Liverpool.
+				My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms.
+				I am appointed for the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design.
+				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.
+				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
 
-			<h4>Research interests</h4>
-        	<ul style="list-style-type: disc;">
-		  	  <li>Imprecise probability and statistics</li>
-		  	  <li>Intrusive and non-intrusive forward uncertainty propagation</li>
-		  	  <li>Monte Carlo and advanced sampling</li>
-		  	  <li>Inferential statistics with imprecise data</li>
-			  	<li>Reliability analysis</li>
-			  	<li>Rigorous computing with interval analysis</li>
-			  	<li>Machine learning for approximation of computer codes</li>
-			  	<li>Robust Bayes</li>
-			  	<li>Probability and confidence boxes</li>
-			  	<li>Credal networks</li>
-			  	<li>Parametric dimensionality reduction</li>
+		<h4>About my web presence</h4>
+			<p> See my list of publications on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar.</a></p>
+			<p> I write a lot of code, on my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find what I have currently made public. </p>
+			<p> Some of my preprints can be open accessed via <a href=""><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
+			<p> If you are an employer you may want to look me up on <a href=""><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
+			<p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p>
+			<p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science. 
+
+			<!--<h4>Research interests</h4>-->
+        	<!--<ul style="list-style-type: disc;">-->
+		  	<!--<li>Imprecise probability and statistics</li>-->
+		  	<!--<li>Intrusive and non-intrusive forward uncertainty propagation</li>-->
+		  	<!--<li>Monte Carlo and advanced sampling</li>-->
+		  	<!--<li>Inferential statistics with imprecise data</li>-->
+			<!--<li>Reliability analysis</li>-->
+			<!--<li>Rigorous computing with interval analysis</li>-->
+			<!--<li>Machine learning for approximation of computer codes</li>-->
+			<!--<li>Robust Bayes</li>-->
+			<!--<li>Probability and confidence boxes</li>-->
+			<!--<li>Credal networks</li>-->
+			<!--<li>Parametric dimensionality reduction</li>-->
 			</ul>
 
 	        </div>
