--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,13 @@
 
         <br>
         <div class="row">
-        	<h4>The best way to reach me is by email.</h4>
+			<h4>Send me an email if you want to get in touch:</h4>
+			
+			<p id="myEmail"></p>
+
+			<br>
+
+			<h4>Alternatively, DM me on Twitter or LinkedIn.</h4>
 		</div>
 
 		<hr>
