--- a/service.html
+++ b/service.html
@@ -34,25 +34,27 @@
 
 		<div class="container">
         <div class="row">
-        	<h2>Guest Editor for IJAR</h2>
-        	<p>Special issue: <i>Computing with confidence</i> on the International Journal for Approximate Reasoning</p>
+		<h2>Academic service</h2>
+		<br>
+        	<h3>Guest Editor for IJAR</h3>
+        	<p>Special issue: <i>Computing with confidence</i> on the <a href="https://www.journals.elsevier.com/international-journal-of-approximate-reasoning"> International Journal for Approximate Reasoning</a></p>
         	<hr>
-        	<h2>Referee</h2>
+        	<h3>Referee</h3>
         	<ul>
         		<li>Mechanical systems and signal processing, Elsevier</li>
         		<li>Structural safety, Elsevier</li>
         		<li>Journal of Risk and Uncertainty in Engineering Systems, part B: Mechanical engineering, ASME-ASCE</li>
         	</ul>
         	<hr>
-        	<h2>Scientific committee</h2>
+        	<h3>Scientific committee</h3>
         	<ul>
         		<li>Society for imprecise probability, ISIPTA</li>
         		<li>Reliable engineering computing, REC</li>
         	</ul>
         	<hr>
-        	<h2>Co-chair of <a href="http://rec2018.uk">REC 2018</a></h2>
+        	<h3>Co-chair of <a href="http://rec2018.uk">REC 2018</a></h3>
         	<hr>
-        	<h2>Editor of the Risk Institute <a href="https://riskinstitute.uk/newsletters/">Newsletter</a></h2>
+        	<h3>Editor of the Risk Institute <a href="https://riskinstitute.uk/newsletters/">Newsletter</a></h3>
         			until May 2017
 		</div>
 
