--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<h4>About my web presence</h4>
 			<p> See my list of publications on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar.</a></p>
 			<p> I write a lot of code, on my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find what I have currently made public. </p>
-			<p> Some of my preprints can be open accessed via <a href=""><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
-			<p> If you are an employer you may want to look me up on <a href=""><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
+			<p> Some of my preprints can be open accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
+			<p> If you are an employer you may want to look me up on <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
 			<p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p>
 			<p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science. 
 
