minor update and removed analytics tag

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144201758-1"></script>
+<!-- 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144201758-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
 		  gtag('config', 'UA-144201758-1');
-		</script>
+		</script> -->
         <link href="" rel="icon" type="image/x-icon">
 		<title>Marco's site</title>
 		<meta charset="utf-8" />
@@ -37,9 +37,9 @@
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am postdoc at the University of Liverpool.
-				My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms.
-				I am appointed for the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design.
+	        	<p>I am a postdoctoral researcher at the University of Liverpool.
+				My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms, see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for more.
+<!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
 				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.
 				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
