--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <br>
 
 		<h4>About my web presence</h4>
-			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar.</a> you can check out my citations and more.</p>
+			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar</a> you can check out my citations and h-index.</p>
 			<p> I write a lot of code, on my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find what I have currently made public. </p>
 			<p> Some of my preprints can be open accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
 			<p> If you are an employer you may want to look me up on <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
