minor update of style

--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
 
         <br>
         <div class="row">
-			<h4>Send me an email if you want to get in touch:</h4>
+			<h4>Email</h4>
 			
 			<p id="myEmail"></p>
 
 			<br>
 
-			<h4>Alternatively, DM me on Twitter or LinkedIn.</h4>
+			<p>You can also reach me via direct message on Twitter or LinkedIn.</p>
 		</div>
 
 		<hr>
