--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		  gtag('config', 'UA-144201758-1');
 		</script> -->
-        <link href="" rel="icon" type="image/x-icon">
+<!--        <link href="" rel="icon" type="image/x-icon">-->
 		<title>Marco's site</title>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -37,10 +37,11 @@
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am a postdoctoral researcher at the University of Liverpool.
+	        	<p>I am a postdoctoral researcher at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>.
 				My research focuses on the efficient and rigorous uncertainty propagation through computational codes via both intrusive and non-intrusive algorithms, see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for more.
 <!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
-				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.
+				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
+<!--                    <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.-->
 				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
                         <h4>Publications</h4>
@@ -68,20 +69,18 @@
 			<!--<li>Probability and confidence boxes</li>-->
 			<!--<li>Credal networks</li>-->
 			<!--<li>Parametric dimensionality reduction</li>-->
-			</ul>
-
-	        </div>
-
+<!--			</ul>-->
+            </div>
 
 	    	<div class="columnR">
-	        	<img src="pics/marco5.jpg" alt="marco_face" width="280" height="280">
+	        	<img src="pics/marco5.jpg" alt="headshot" width="180" height="180">
 	    	</div>
         </div>
 
 		<hr>
 
 		<footer style="display: block; width: 100%" id="myFooter"></footer>
-
+	   
 	</div>
 
 	<script src="equal4allpages.js"></script>
