updated list of publications

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
                         <h4>Publications</h4>
-                        <p>Open my <a href="./full2020.pdf" target="_blank">full list</a> in a single PDF document.</p>
+                        <p>Open my <a href="./pdf20210619.pdf" target="_blank">full list</a> in a single PDF document.</p>
                         <br>
 
 		<h4>About my web presence</h4>
