--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am a postdoctoral researcher (Research Associate) at the University of Liverpool's <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>.
-				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or can be done suboptimally with heuristics and/or non-intrusive algorithms. To know more about my funder see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for more.
+	        	<p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
+				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or suboptimally with heuristics and non-intrusive algorithms. To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>.
 <!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
 				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
 <!--                    <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.-->
