updated list of publications

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
 	        	<p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
 				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or suboptimally with heuristics and non-intrusive algorithms. 
-				Although intrusive algorithms are desirable for correctness, often in engineering heuristics are used to unlock efficiency at the expense of rigour. 
-				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration. 
-				If the problem is locked in a black-box code, then the number of parameters and the complexity of the model, like the intervariable dependence and the nonlinearity, are the most important features to look at.
+				Although intrusive algorithms are desirable for correctness, often in engineering, heuristics are used to unlock efficiency at the expense of rigour. 
+				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration, whilst 
+                                if the problem is locked in a black box, then the number of parameters and the complexity of the model, like the intervariable dependence and the nonlinearity, are the critical features to look at.
 				To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>.
 <!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
 				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
@@ -49,7 +49,7 @@
 				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
 			<br>
                         <h4>Publications</h4>
-                        <p>You can check my full list of publications at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or you can download the <a href="./pdf20210825.pdf" target="_blank">full list</a> in a single PDF document.</p>
+                        <p>You can check my full list of publications at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or you can download the <a href="./full20210921_web.pdf" target="_blank">full list</a> in a single PDF document.</p>
                         <br>
 
 		<h4>About my web presence</h4>
