--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	        	<p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
 				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or suboptimally with heuristics and non-intrusive algorithms. 
 				Although intrusive algorithms are desirable for correctness, often in engineering, heuristics are used to unlock efficiency at the expense of rigour. 
-				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration, whilst 
+				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration, whereas 
                                 if the problem is locked in a black box, then the number of parameters and the complexity of the model, like the intervariable dependence and the nonlinearity, are the critical features to look at.
 				To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>.
 <!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
