--- a/index.html
+++ b/index.html
@@ -36,17 +36,25 @@
 		<div class="row">
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
-				<p style="color: gray">PhD, Institute for Risk and Uncertainty</p>
-	        	<p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
+				<p style="color: gray">Postdoc in engineering</p>
+				I'm a research associate at the University of Liverpool.
+				My research focuses on theoretical and practical aspects of computing with uncertainty. My areas of interest are: (1) rigorous inference from small-sized datasets with imprecise probability and robust Bayes; (2) propagation of uncertainty through complex computations; (3) code optimization on GPUs and super computers.
+
+				I am also interested in: mathematics-based animations, pattern recognition in time-history data, neural ODEs, web-based research software.
+
+				My research is helping shading more light on: (-) digital twins technology, (-) hard-to-diagnose diseases, (-) high-magnitude earthquakes in urban areas, (-) the quantification of measurement errors and modelling uncertainties in engineering.
+				
+				I hold a PhD in engineering from the University of Liverpool.
+	        		<!-- <p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
 				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or suboptimally with heuristics and non-intrusive algorithms. 
 				Although intrusive algorithms are desirable for correctness, often in engineering, heuristics are used to unlock efficiency at the expense of rigour. 
 				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration, whereas 
                                 if the problem is locked in a black box, then the number of parameters and the complexity of the model, like the intervariable dependence and the nonlinearity, are the critical features to look at.
-				To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>.
-<!-- 				Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
-				Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
+				To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>. -->
+<!-- 				<!--Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
+				<!--Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
 <!--                    <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.-->
-				I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p>
+				<!--I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p> -->
 			<br>
                         <h4>Publications</h4>
                         <p>You can check my full list of publications at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or you can download the <a href="./full20210921_web.pdf" target="_blank">full list</a> in a single PDF document.</p>
