--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				I'm a research associate at the University of Liverpool.
 				My research focuses on theoretical and practical aspects of computing with uncertainty. My areas of interest are: (1) rigorous inference from small-sized datasets with imprecise probability and robust Bayes; (2) propagation of uncertainty through complex computations; (3) code optimization on GPUs and super computers.
 
-				I am also interested in: mathematics-based animations, pattern recognition in time-history data, neural ODEs, web-based research software.
+				I am also interested in: mathematics-based animations, rigorous computing, computer-aided proof, modelling of time-history data, neural ODEs, web-based research software.
 
-				My research is helping shading more light on: (-) digital twins technology, (-) hard-to-diagnose diseases, (-) high-magnitude earthquakes in urban areas, (-) the quantification of measurement errors and modelling uncertainties in engineering.
+				My research has impact on: (*) digital twins technology, (*) hard-to-diagnose diseases, (*) quantification of measurement and modelling uncertainty in engineering and machine learning.
 				
 				I hold a PhD in engineering from the University of Liverpool.
 	        		<!-- <p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
