--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 				<h2>Marco De Angelis</h2>
 				<p style="color: gray">Postdoc in engineering</p>
 				I'm a research associate at the University of Liverpool.
-				My research focuses on theoretical and practical aspects of computing with uncertainty. My areas of interest are: (1) rigorous inference from small-sized datasets with imprecise probability and robust Bayes; (2) propagation of uncertainty through complex computations; (3) code optimization on GPUs and super computers.
+				My research focuses on theoretical and practical aspects of computing with uncertainty. My areas of interest are: (1) rigorous inference from small-sized and uncertain data; (2) propagation of uncertainty through complex computations; (3) code optimization.
 
-				I am also interested in: mathematics-based animations, rigorous computing, computer-aided proof, modelling of time-history data, neural differential equations, web-based research software.
+				I am also interested in: rigorous computing, computer-aided proof, modelling of time-history data, neural differential equations, web-based research software, mathematics-based artwork.
 
-				My research has impact on: (*) digital twins technology, (*) hard-to-diagnose diseases, (*) robust and explainable AI, (*) earthquake mitigation.
+				My research is helping casting more light on: (*) digital twins technology, (*) hard-to-diagnose diseases, (*) robust and explainable AI, (*) earthquake simulation.
 				
 				I hold a PhD in engineering from the University of Liverpool.
 	        		<!-- <p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
