clean up old pages

--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
 	</head>
 	<body>
 
-	<!--<div class="mobile-container">-->
-	<!--<p>https://marcodeangelis.github.io</p>-->
-
-		<!--&nbsp <font size="1">You are currently on this site</font> <font face="courier" size="1"><a href="https://marcodeangelis.github.io">https://marcodeangelis.github.io</a></font> <hr>-->
-
-		<!--<header>
-			<h2> &nbsp Welcome to my site!</h2>
-   		</header>-->
-
-		<div class="container" id="myNavbar"></div>
-
 		<div class="container">
 		<div class="row">
 			<div class="columnL">
@@ -45,43 +34,38 @@
 				My research is helping casting more light on: (*) digital twins technology, (*) hard-to-diagnose diseases, (*) robust and explainable AI, (*) earthquake simulation.
 				
 				I hold a PhD in engineering from the University of Liverpool.
-	        		<!-- <p>I am a postdoctoral researcher (Research Associate) at the <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a>, University of Liverpool.
-				My research focuses on computing with uncertainty. This kind of computations can be done rigorously with intrusive algorithms or suboptimally with heuristics and non-intrusive algorithms. 
-				Although intrusive algorithms are desirable for correctness, often in engineering, heuristics are used to unlock efficiency at the expense of rigour. 
-				We study whether this loss of rigour can be acceptable from a practical perspective or contrarily more computational investment is needed. Often the right balance can be found knowing the engineering problem under consideration, whereas 
-                                if the problem is locked in a black box, then the number of parameters and the complexity of the model, like the intervariable dependence and the nonlinearity, are the critical features to look at.
-				To know more about the research project sponsoring my research see <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a>. -->
-<!-- 				<!--Currently, I serve the <i>Uncertainty</i> theme on the <a href="http://digitwin.ac.uk">EPSRC programme grant on Digital Twins</a> for improved dynamic design. -->
-				<!--Previously, I was academic manager of the centre for doctoral training in complex systems and environments at the University of Liverpool. 
-<!--                    <a href="https://riskinstitute.uk">Institute for Risk and Uncertainty</a> for over two years.-->
-				<!--I hold a PhD in risk and uncertainty in engineering from University of Liverpool, an MRes <i>cum laude</i> and a BSc <i>cum laude</i> in engineering for the mitigation of natural risks from <i>Roma Tre</i>, University of Rome. </p> -->
 			<br>
-                        <h4>Publications</h4>
-                        <p>You can check my full list of publications at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or you can download the <a href="./full20210921_web.pdf" target="_blank">full list</a> in a single PDF document.</p>
-                        <br>
+			<br>
+        <h4>Publications</h4>
+    	<p>My updated list of publications can be consulted at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or in a <a href="./full20210921_web.pdf" target="_blank">single pdf</a>.</p>
+        <br>
+
+		<!-- https://codepen.io/Inlesco/pen/XXRRmY/ -->
+		<!-- https://www.w3schools.com/howto/howto_js_collapsible.asp -->
+		<!-- https://codepen.io/surajr1711/pen/wVgEMa -->
+
+		<!-- <button class="circle">
+			<div class="line-wrapper">
+			  <div class="horizontal"></div>
+			  <div class="vertical"></div>
+			</div>
+		</button>
+
+		<div class="content">
+		<div class="content-wrapper">
+			<h1>Some heading</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		</div> -->
 
 		<h4>About my web presence</h4>
 			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar</a> you can check out my citations and h-index.</p>
-			<p> I write a lot of code, on my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find what I have currently made public. </p>
+			<p> On my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find the code I have currently made public. </p>
 			<p> Some of my preprints can be open accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
-			<p> If you are an employer you may want to look me up on <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
-			<p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p>
-			<p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science. 
+			<p> A short public version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
+			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
+			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
 
-			<!--<h4>Research interests</h4>-->
-        	<!--<ul style="list-style-type: disc;">-->
-		  	<!--<li>Imprecise probability and statistics</li>-->
-		  	<!--<li>Intrusive and non-intrusive forward uncertainty propagation</li>-->
-		  	<!--<li>Monte Carlo and advanced sampling</li>-->
-		  	<!--<li>Inferential statistics with imprecise data</li>-->
-			<!--<li>Reliability analysis</li>-->
-			<!--<li>Rigorous computing with interval analysis</li>-->
-			<!--<li>Machine learning for approximation of computer codes</li>-->
-			<!--<li>Robust Bayes</li>-->
-			<!--<li>Probability and confidence boxes</li>-->
-			<!--<li>Credal networks</li>-->
-			<!--<li>Parametric dimensionality reduction</li>-->
-<!--			</ul>-->
             </div>
 
 	    	<div class="columnR">
@@ -106,6 +90,23 @@
 	$(document).ready(function () {
         $('.home').addClass('active');
     });
+
+
+	// plain JS
+	document.querySelector('.circle').addEventListener('click', () => {
+	document.querySelector('.vertical').classList.toggle('open');
+	document.querySelector('.line-wrapper').classList.toggle('open');
+	document.querySelector('.content').classList.toggle('open');
+	});
+
+
+	// // jQuery
+	// $('.circle').on('click', () => {
+	//   $('.line-wrapper').toggleClass('open');
+	//   $('.vertical').toggleClass('open');
+	//   $('.content').toggleClass('open');
+	// });
+
 	</script>
 
 	</body>
