--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-        <link rel="stylesheet" href="marco.css">
+        <link rel="stylesheet" href="static/css/marco.css">
 	</head>
 	<body>
 
@@ -61,7 +61,7 @@
 	   
 	</div>
 
-	<script src="equal4allpages.js"></script>
+	<script src="static/js/equal4allpages.js"></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"
 	integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -72,14 +72,6 @@
 	$(document).ready(function () {
         $('.home').addClass('active');
     });
-
-	// // jQuery
-	// $('.circle').on('click', () => {
-	//   $('.line-wrapper').toggleClass('open');
-	//   $('.vertical').toggleClass('open');
-	//   $('.content').toggleClass('open');
-	// });
-
 	</script>
 
 	</body>
