--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 		<div class="row">
 			<div class="columnL">
 				<h2>Marco De Angelis</h2>
-				<p style="color: gray">Postdoc in engineering</p>
-				I'm a research associate at the University of Liverpool.
-				My research focuses on theoretical and practical aspects of computing with uncertainty. My areas of interest are: (1) rigorous inference from small-sized and uncertain data; (2) propagation of uncertainty through complex computations; (3) code optimization.
-
-				I am also interested in: rigorous computing, computer-aided proof, modelling of time-history data, neural differential equations, web-based research software, mathematics-based artwork.
-
-				My research is helping casting more light on: (*) digital twins technology, (*) hard-to-diagnose diseases, (*) robust and explainable AI, (*) earthquake simulation.
-				
-				I hold a PhD in engineering from the University of Liverpool.
+				<p style="color: gray">Lecturer in Engineering</p>
+				My research team looks into quantitative and qualitative methods to increase trust in digital twins. 
+				On the quantitative side, the focus is on rigorous physics-based simulation comprising: software verification, inference from small and uncertain data, uncertainty propagation, and optimisation. 
+				The qualitative side is currently underdeveloped, although the focus is on data semantics to allow for findability, accessibility, transparency, and traceability. 
+				For example, any data should always travel with its ontological metadata for contextualisation. Data semantics are foundational to trust within digital twins. 
 			<br>
 			<br>
         <h4>Publications</h4>
@@ -42,9 +38,9 @@
 
 		<h4>About my web presence</h4>
 			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar</a> you can check out my citations and h-index.</p>
-			<p> On my <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github page</a> you can find the code I have currently made public. </p>
-			<p> Some of my preprints can be accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
-			<p> A short public version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
+			<p> On <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github </a> you can see my code. </p>
+			<p> My publications can be accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
+			<p> See my short CV at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
 			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
 			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
 
