--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div class="container">
 		<div class="row">
 			<div class="columnL">
-				<h2>Marco De Angelis</h2>
-				<p style="color: gray">Lecturer in Engineering</p>
-				My research team looks into quantitative and qualitative methods to increase trust in digital twins. 
-				On the quantitative side, the focus is on rigorous physics-based simulation comprising: software verification, inference from small and uncertain data, uncertainty propagation, and optimisation. 
-				The qualitative side is currently underdeveloped, although the focus is on data semantics to allow for findability, accessibility, transparency, and traceability. 
+				<h2>Marco de Angelis</h2>
+				<p style="color: gray">Lecturer in Engineering at the University of Strathclyde</p>
+				My research looks into quantitative and qualitative methods to increase trust in digital twins. 
+				On the quantitative side, the focus is on rigorous physics-based simulation, comprising: automatic uncertainty propagation, inference from small and uncertain data, and optimisation. 
+				On the qualitative side the focus is on data semantics to allow for findability, accessibility, transparency, and traceability. 
 				For example, any data should always travel with its ontological metadata for contextualisation. Data semantics are foundational to trust within digital twins. 
 			<br>
 			<br>
@@ -37,13 +37,13 @@
         <br>
 
 		<h4>About my web presence</h4>
-			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i> Google Scholar</a> you can check out my citations and h-index.</p>
-			<p> On <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i> Github </a> you can see my code. </p>
-			<p> My publications can be accessed via <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i> Research Gate.</a></p>
-			<p> See my short CV at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i> Linkedin.</a></p>
+			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a> you can check out my citations and h-index.</p>
+			<p> On <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a> you can see my code. </p>
+			<p> The preprints of my publications are on <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
+			<p>* <font style="color:gray;font-size: smaller;">If the fulltext appears as <i>private</i>, chances are it is open-access. So, just look for the <i>doi</i> to access the published version! Otherwise, just drop me a message in <i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>.</font></p>
+			<p> See a short CV at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p>
 			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
 			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
-
             </div>
 
 	    	<div class="columnR">
