--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 			<br>
 			<br>
         <h4>Publications</h4>
-    	<p>My updated list of publications can be consulted at <a href="https://www.liverpool.ac.uk/engineering/staff/marco-de-angelis-2/publications/">my institutional page</a>, or downloaded in a <a href="./rtf20220302.pdf" target="_blank">single pdf</a>.</p>
+    	<p>My updated list of publications can be consulted at <a href="https://www.strath.ac.uk/staff/de_angelismarcodr/">my institutional page</a>, or downloaded in a <a href="./rtf20221215.pdf" target="_blank">single pdf</a>.</p>
         <br>
 
 		<h4>About my web presence</h4>
-			<p> On <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a> you can check out my citations and h-index.</p>
-			<p> On <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a> you can see my code. </p>
-			<p> The preprints of my publications are on <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
+			<p> An estimation of my citations and h-index is on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a>.</p>
+			<p> Most of my code is on <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a>. </p>
+			<p> The accepted manuscripts and preprints are on <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
 			<p>* <font style="color:gray;font-size: smaller;">If the fulltext appears as <i>private</i>, chances are it is open-access. So, just look for the <i>doi</i> to access the published version! Otherwise, just drop me a message in <i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>.</font></p>
-			<p> See a short CV at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p>
+			<p> A short version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p>
 			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
 			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
             </div>
