--- a/index.html
+++ b/index.html
@@ -26,28 +26,30 @@
 			<div class="columnL">
 				<h2>Marco de Angelis</h2>
 				<p style="color: gray">Lecturer in Engineering at the University of Strathclyde</p>
-				My research looks into quantitative and qualitative methods to increase trust in digital twins. 
-				On the quantitative side, the focus is on rigorous physics-based simulation, comprising: automatic uncertainty propagation, inference from small and uncertain data, and optimisation. 
-				On the qualitative side the focus is on data semantics to allow for findability, accessibility, transparency, and traceability. 
-				For example, any data should always travel with its ontological metadata for contextualisation. Data semantics are foundational to trust within digital twins. 
+				My main research interest is assessing and improving the efficiency of computations done with imprecisely specified numbers. 
+				A number can be specified as an interval, a pair of moments, a probability distribution, an imprecisely specified distribution, and many more. 
+				There are numerous advantages that follow from being able to explicitly compute with imprecision. 
+				First, we can automatically propagate the uncertainty for model verification. 
+				Second, we can make rigorous inference with scarce empirical data for model calibration and validation. 
+				I apply this research for the enhancement of trust in digital twins for structural health monitoring. 
 			<br>
 			<br>
         <h4>Publications</h4>
-    	<p>My updated list of publications can be consulted at <a href="https://www.strath.ac.uk/staff/de_angelismarcodr/">my institutional page</a>, or downloaded in a <a href="./rtf20221215.pdf" target="_blank">single pdf</a>.</p>
+    	<p>Here is my <a href="https://www.strath.ac.uk/staff/de_angelismarcodr/">updated list of publications</a>, also in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format.</p>
         <br>
 
 		<h4>About my web presence</h4>
-			<p> An estimation of my citations and h-index is on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a>.</p>
-			<p> Most of my code is on <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a>. </p>
+			<p> My citations and h-index is on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a>.</p>
+			<p> My code is on <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a>. </p>
 			<p> The accepted manuscripts and preprints are on <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
 			<p>* <font style="color:gray;font-size: smaller;">If the fulltext appears as <i>private</i>, chances are it is open-access. So, just look for the <i>doi</i> to access the published version! Otherwise, just drop me a message in <i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>.</font></p>
-			<p> A short version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p>
+			<!-- <p> A short version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p> -->
 			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
 			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
             </div>
 
 	    	<div class="columnR">
-	        	<img src="pics/marco5.jpg" alt="headshot" width="180" height="180">
+	        	<img src="pics/headshot_marco.jpg" alt="headshot" width="150" height="180">
 	    	</div>
         </div>
 
