update pub list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<br>
 			<br>
         <h4>Publications</h4>
-    	<p>Here is my <a href="https://www.strath.ac.uk/staff/de_angelismarcodr/">updated list of publications</a>, also in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format.</p>
+    	<p>Here is my <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/">updated list of publications</a>, also in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format.</p>
         <br>
 
 		<h4>About my web presence</h4>
